# hackathon-sia

./: .env.template  .gitignore  CLAUDE.md  README.md  bootstrap.sh  dashboard.py  pyproject.toml
eval/: braintrust_eval.py
scripts/: run.sh  seed_servicenow.py
self_improving_agent/: __init__.py  agent.py  mcp_servers.py  tools.py
